# zkSNARK-LLVM

./: CMakeLists.txt  README.md
cmake/: CircuitCompile.cmake
examples/: CMakeLists.txt
examples/cpp/: AES128.cpp  CMakeLists.txt  SHA256.cpp  add1.cpp  add10.cpp  add100.cpp  add1000.cpp  calltest.cpp  div1.cpp  eq.cpp  fortest.cpp  integer.cpp  left.cpp  mul1.cpp  mul10.cpp  mul100.cpp  mul1000.cpp  neq.cpp  newtest.cpp  not1.cpp  ramtest.cpp  readtest.cpp  right.cpp  sort.cpp  sortverify.cpp  test1.cpp  xor1.cpp
examples/inputs/: AES128.inp  SHA256.inp  add.inp  add1.inp  add10.inp  add1000.inp  calltest.inp  div1.inp  eq.inp  fortest.inp  integer.inp  mul100.inp  neq.inp  newtest.inp  not1.inp  ramtest.inp  readtest.inp  sort.inp  sortverify.inp  xor1.inp
libs/circifier/clang/: CMakeLists.txt
libs/circifier/llvm/: CMakeLists.txt
libs/crypto3/cmake/modules/share/modules/cmake/: CMTest.cmake
libs/libsnark/libsnark/: CMakeLists.txt
libs/libsnark/libsnark/jsnark_interface/: run_ppzksnark.cpp
